appId: com.folia.app.staging
---
- launchApp
- tapOn:
    id: "login-button"
- tapOn:
    id: "username"
- inputText: "kodagodaeranda@gmail.com"
- tapOn: "Continue"
- tapOn:
    id: "password"
- inputText: "Test@123"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Projects"
    timeout: 25000
- tapOn:
    id: "add-new-project-button"
- tapOn:
    id: "project-name-text-field"
- inputText: "SampleProject1"
- tapOn:
    id: "save-button"
- tapOn:
    id: "SampleProject1"
- assertVisible: "SampleProject1"
- tapOn:
    point: "8%,7%"
- assertVisible: "No Documents"
- tapOn:
    point: "97%,58%"
- assertVisible: "Share Project"
- assertVisible: "Edit Project Details"
- assertVisible: "Duplicate Project"
- assertVisible: "Delete Project"
- tapOn: "Delete Project"
- tapOn: "Delete"
- assertVisible:
    id: "toastContentContainer"
- tapOn:
    point: "98%,7%"
- tapOn: "Logout"
- assertVisible: "login-button"