appId: com.folia.app.staging
---
- launchApp
- tapOn:
    id: "login-button"
- tapOn:
    id: "username"
- inputText: "kodagodaeranda@gmail.com"
- tapOn: "Continue"
- tapOn:
    id: "password"
- inputText: "Test@123"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Projects"
    timeout: 25000
- tapOn:
    id: "add-new-project-button"
- tapOn:
    id: "project-name-text-field"
- inputText: "SampleProject1"
- tapOn:
    id: "save-button"
- tapOn:
    text: "Personal"
    index: 1
- tapOn:
    point: "97%,58%"
- tapOn: "Edit Project Details"
- tapOn:
    id: "project-name-text-field"
- "eraseText"
- tapOn:
    id: "save-button"
    optional: true
- tapOn:
    id: "project-name-text-field"
- inputText: "MyProject"
- tapOn:
    id: "save-button"
- swipe:
    direction: "DOWN"
- assertVisible:
    text: "MyProject"
    index: 1
- tapOn:
    point: "97%,58%"
- tapOn: "Delete Project"
- assertVisible: "MyProject?"
- tapOn: "Delete"
- assertVisible:
    id: "toastText1"
- tapOn:
    point: "98%,7%"
- tapOn: "Logout"
- assertVisible:
    id: "login-button"
