appId: com.folia.app.staging
---
- launchApp
- tapOn:
    id: "login-button"
- tapOn:
    id: "username"
- inputText: "kodagodaeranda@gmail.com"
- tapOn: "Continue"
- tapOn:
    id: "password"
- inputText: "Test@123"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "Projects"
    timeout: 25000
- tapOn:
    id: "add-new-project-button"
- tapOn:
    id: "project-name-text-field"
- inputText: "SampleProject1"
- tapOn:
    id: "save-button"
- tapOn:
    text: "Personal"
    index: 1
- tapOn:
    point: "97%,58%"
- tapOn: "Duplicate Project"
- assertVisible:
    text: "SampleProject1 Copy"
    index: 1
- tapOn:
    point: "97%,58%"
- tapOn: "Delete Project"
- assertVisible: "SampleProject1?"
- tapOn: "Delete"
- assertVisible:
    text: "SampleProject1 has been deleted."
    index: 1
- tapOn:
    point: "47%,58%"
- tapOn: "Delete Project"
- assertVisible: "SampleProject1 Copy?"
- tapOn: "Delete"
- assertVisible:
    text: "SampleProject1 Copy has been deleted."
    index: 1
- tapOn:
    point: "98%,7%"
- tapOn: "Logout"
- assertVisible:
    id: "login-button"
